@@ -35,8 +35,9 @@ options</a></h1>
    <!-- This SECnn should be the "Choosing Package Options" section. -->
    <a href="http://www.gnu.org/software/autoconf/manual/autoconf-2.57/html_node/autoconf_131.html#SEC131">they
    all have opposite forms as well</a>
-   (enable/disable and with/without).  The defaults are for current
-   development sources.
+   (enable/disable and with/without).  The defaults are for <strong>current
+   development sources</strong>, which may be different than those for
+   released versions.
 </p>
 <p>The canonical way to find out the configure options that are
    available for a given set of libstdc++ sources is to go to the
