@@ -1,3 +1,8 @@
+2004-08-04  Phil Edwards  <phil@codesourcery.com>
+
+	* docs/html/configopts.html:  Emphasize that options change.
+	* docs/html/17_intro/configury.html:  Update links.
+
 2004-08-03  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/bits/list.tcc: Trivial formatting fixes.
